tried to improve the code quality using sonarCube, sonarLint