@@ -4,7 +4,6 @@ import com.sameer.journalApp.entity.User;
 import com.sameer.journalApp.repository.UserRepo;
 import lombok.extern.slf4j.Slf4j;
 import org.bson.types.ObjectId;
-import org.slf4j.*;
 import org.springframework.beans.factory.annotation.*;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -17,9 +16,12 @@ import java.util.Optional;
 @Component
 @Slf4j
 public class UserService {
-    @Autowired
-    UserRepo repo;
+    private final UserRepo repo;
 
+    @Autowired
+    public UserService(UserRepo repo) {
+        this.repo = repo;
+    }
 
     private static final PasswordEncoder passwordEncoder=  new BCryptPasswordEncoder();
     public User saveUser(User user) {
@@ -29,12 +31,11 @@ public class UserService {
     public User saveNewUser(User user) {
         try {
             user.setPassword(passwordEncoder.encode(user.getPassword()));
-            user.setRoles(Arrays.asList("USER"));
+            user.setRoles(List.of("USER"));
             return repo.save(user);
         } catch (Exception e) {
             log.info("User already created, exception thrown");
             log.debug("DEBUG enabled");
-//            throw new RuntimeException("Error while creating the user",e);
         }
         return null;
     }
